--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
       <div class="node-card service-node-card">
         <div class="node-badge" style="background:rgba(59,130,246,0.1);color:var(--service-color);border:1px solid rgba(59,130,246,0.25);">Service</div>
         <div class="node-title" style="color:var(--service-color)">Intel NUC7i5BNH — Service Node</div>
-        <div class="node-role" style="color:var(--accent-cyan)">DNS · DHCP Server · NFS · HAProxy · Cluster Support Services</div>
+        <div class="node-role" style="color:var(--accent-cyan)">DNS · DHCP Server · NFS · HAProxy - Cluster Support Services</div>
         <div class="spec-grid">
           <span class="spec-label">CPU</span><span class="spec-val">Intel i5-7260U @ 2.20 GHz · 4 vCPU</span>
           <span class="spec-label">RAM</span><span class="spec-val">8 GB DDR4</span>
