--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
       <div class="router-header">
         <div class="router-icon">📡</div>
         <div>
-          <div class="router-title">GLI GL-MT3000 Router / Gateway</div>
-          <div class="router-sub">NAT · Firewall · DHCP Server</div>
+          <div class="router-title">GLI GL-MT3000 Router</div>
+          <div class="router-sub">NAT · Firewall · DHCP Server · Gateway</div>
         </div>
       </div>
       <div class="dhcp-badge">
